[package]
name = "taskbar-twitch"
version = "0.1.0"
authors = ["HazyAlex <HazyAlex@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["full"] }
