[package]
name = "taskbar-twitch"
version = "0.1.0"
authors = ["HazyAlex <HazyAlex@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }

serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
structopt = "0.3"

tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.16", features = ["executor"] }

winit = { version = "0.24.0", features = [] }
open = "2.0.0"
winrt-notification = "0.3.1"
trayicon = { version = "0.1.1", features = ["winit"] }
