[package]
name = "taskbar-twitch"
version = "1.0.3"
authors = ["HazyAlex <HazyAlex@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }

serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
structopt = "0.3"
enum-iterator = "0.7.0"

tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.21", features = ["executor"] }

winit = { version = "0.25.0", features = [] }
open = "3.0.1"
winrt-notification = "0.5.1"
trayicon = { version = "0.1.3", features = ["winit"] }
